Add User endpoints and MUI Login form

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,13 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.0",
     "@ant-design/icons": "^5.2.6",
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
+    "@mui/material-nextjs": "latest",
+    "@mui/x-date-pickers": "^7.12.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/js-cookie": "^3.0.4",
     "@types/lodash": "^4.14.199",
@@ -25,7 +32,6 @@
     "autoprefixer": "10.4.16",
     "axios": "^1.5.1",
     "camelcase-keys": "^9.0.0",
-    "cypress": "^13.3.0",
     "dot-prop-immutable": "^2.1.1",
     "dot-prop-immutable-chain": "^0.0.3",
     "eslint": "8.50.0",
@@ -42,6 +48,7 @@
     "postcss": "^8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^8.1.2",
     "redux-actions": "^3.0.0",
     "redux-logger": "^3.0.6",
@@ -50,13 +57,7 @@
     "tailwindcss": "3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "5.2.2",
-    "webpack": "^5.88.2",
-    "@emotion/cache": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@mui/icons-material": "latest",
-    "@mui/material": "latest",
-    "@mui/material-nextjs": "latest"
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.3",
