Add firebase Auth

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,8 @@
 APP_API_URL=http://localhost:3002
+
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyBn5YtupyTn9YWf75
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=ebuddy-dev-test.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=ebuddy-dev-test
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=ebuddy-dev-test.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=117377693412
+NEXT_PUBLIC_FIREBASE_APP_ID=1:117377693412:web:83a63a97462c4ebd099ef1
