--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
     "dot-prop-immutable-chain": "^0.0.3",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "firebase": "^10.12.5",
+    "firebase-admin": "^12.3.0",
     "jest": "^29.7.0",
     "jest-css-modules-transform": "^4.4.2",
     "js-cookie": "^3.0.5",
